[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Assets/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Scripts/Bat.gd" type="Script" id=3]
[ext_resource path="res://Assets/Effects/HitEffect.png" type="Texture" id=4]
[ext_resource path="res://Assets/Effects/EnemyDeathEffect.png" type="Texture" id=5]
[ext_resource path="res://UI/HealthBar.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Flying",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0
height = 4.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Damaged",
"speed": 20.0
}, {
"frames": [  ],
"loop": true,
"name": "Base",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Death",
"speed": 20.0
} ]

[sub_resource type="CanvasItemMaterial" id=22]

[sub_resource type="Theme" id=23]
ProgressBar/colors/Healthbar = Color( 1, 1, 1, 1 )

[node name="Bat" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 3 )

[node name="EntitySprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Flying"
playing = true
offset = Vector2( 0, -12 )
flip_h = true

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionSphere" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 7 )

[node name="Hitbox" type="Area2D" parent="."]
scale = Vector2( 1.00685, 0.962792 )
collision_layer = 4
collision_mask = 6

[node name="HitSphere" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -14 )
shape = SubResource( 8 )

[node name="Effects" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 21 )
animation = "Base"
playing = true

[node name="Control" parent="." instance=ExtResource( 6 )]
margin_left = -10.0
margin_top = -28.0
margin_right = -9.0
margin_bottom = -28.0

[node name="ProgressBar" parent="Control" index="0"]
modulate = Color( 0, 1, 0.0862745, 0.662745 )
material = SubResource( 22 )
margin_right = 20.0
margin_bottom = 5.0
theme = SubResource( 23 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
value = 100.0

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="animation_finished" from="Effects" to="." method="_on_Effects_animation_finished"]

[editable path="Control"]
